@@ -9,7 +9,8 @@
     "DB_ENV->set_tx_timestamp()".
   * Add support for "DB_ENV->get_tx_max()".
   * Add support for "DB_ENV->get_tx_timestamp()".
-  * Add suport for "DB_TXN_WAIT" flag.
+  * Add support for "DB_TXN_WAIT" flag.
+  * Add support for "DB_TXN->set_timeout()".
 
 4.7.4:
   * Under Python 3.0, "bsddb.db.DB_VERSION_STRING",
